force-app/main/default/objects/ssot__EmailEngagement__dlm/fields/KQ_EngagementAssetId__c.field-meta.xml
<CustomField>
    <fullName>KQ_EngagementAssetId__c</fullName>
    <label>Key Qualifier Engagement Asset</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_EngagementAssetId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>