force-app/main/default/objects/ssot__EmailEngagement__dlm/fields/KQ_EngagementPublicationId__c.field-meta.xml
<CustomField>
    <fullName>KQ_EngagementPublicationId__c</fullName>
    <label>Key Qualifier Engagement Publication</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_EngagementPublicationId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>